# xmlsplitter

./: README.md  pyproject.toml
src/: cli.py  parse_file.py  xmlsplitter.py
